--- a/SASSandLess/SASSandLess/SASSandLess.csproj
+++ b/SASSandLess/SASSandLess/SASSandLess.csproj
@@ -38,9 +38,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="dotless.Core">
-      <HintPath>..\packages\dotless.1.5.2\lib\dotless.Core.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -60,6 +57,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="JavaScript1.js" />
+    <Content Include="JSPropertes.js" />
     <Content Include="Style.css" />
     <Content Include="TestPage.html" />
     <Content Include="Web.config" />
@@ -69,7 +68,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="styles.less" />
-    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
