--- a/SASSandLess/SASSandLess/Web.config
+++ b/SASSandLess/SASSandLess/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -9,18 +9,12 @@
     <system.web>
       <compilation debug="true" targetFramework="4.5"/>
       <httpRuntime targetFramework="4.5"/>
-      <httpHandlers>
-          <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core"/>
-      </httpHandlers>
+     
     </system.web>
-    <configSections>
-        <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core"/>
-    </configSections>
-    <dotless minifyCss="false" cache="true" web="false" strictMath="false"/>
+  
+   
     <system.webServer>
-        <handlers>
-            <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition=""/>
-        </handlers>
+      
     </system.webServer>
 
 </configuration>
