--- a/SASSandLess/SASSandLess/bin/SASSandLess.dll.config
+++ b/SASSandLess/SASSandLess/bin/SASSandLess.dll.config
@@ -7,8 +7,14 @@
 
 <configuration>
     <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
+      <compilation debug="true" targetFramework="4.5"/>
+      <httpRuntime targetFramework="4.5"/>
+     
     </system.web>
+  
+   
+    <system.webServer>
+      
+    </system.webServer>
 
 </configuration>
