--- a/SASSandLess/SASSandLess/SASSandLess.csproj
+++ b/SASSandLess/SASSandLess/SASSandLess.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="JavaScript1.js" />
     <Content Include="JSPropertes.js" />
+    <Content Include="ProtoTypes.js" />
     <Content Include="Style.css" />
     <Content Include="TestPage.html" />
     <Content Include="Web.config" />
